@@ -2,7 +2,7 @@
 <!-- m0n0wall default system configuration -->
 <!-- $Id$ -->
 <m0n0wall>
-	<version>1.9</version>
+	<version>2.0</version>
 	<lastchange></lastchange>
 	<system>
 		<hostname>m0n0wall</hostname>
